interface, excepciones y nueva clase coleccion